# dx7

./: .gitignore  Cargo.toml  README.md
demo/: jr-sh1-1.mid
dx7-app/: Cargo.toml
dx7-app/examples/: ep_compare.rs  gm_audit.rs  gm_compare.rs
dx7-app/src/: audio.rs  gm.rs  keyboard.rs  main.rs  rtpmidi.rs
dx7-core/src/: envelope.rs  generated_tables.rs  lfo.rs  lib.rs  operator.rs  patch.rs  pitchenv.rs  rom1a.rs  synth.rs  tables.rs  voice.rs
dx7-core/tests/: dexed_cmp.rs  dump_epiano.rs  signal_chain.rs
dx7-esp32s3/: Cargo.toml  README.md  build.rs  run.sh
dx7-esp32s3/.cargo/: config.toml
dx7-esp32s3/patches/: .gitignore  apply.sh  esp-rom-sys.patch
dx7-esp32s3/src/: ble_midi.rs  es8311.rs  lcd.rs  main.rs
dx7-esp32s3/tools/: uart2wav.py
dx7-midi/: Cargo.toml
dx7-midi/src/: ble.rs  drum.rs  gm.rs  gm_rom.rs  lib.rs  usb.rs
dx7-rp2350/: Cargo.toml  README.md  uf2-deploy
dx7-rp2350/.cargo/: config.toml
dx7-rp2350/src/: main.rs
