[package]
name = "dx7-esp32s3"
version = "0.1.0"
edition = "2021"

[dependencies]
dx7-core = { path = "../dx7-core", default-features = false }
dx7-midi = { path = "../dx7-midi" }
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32s3", "uart"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-alloc = "0.9"
xtensa-lx = "0.13"
esp-radio = { version = "0.17", default-features = false, features = ["esp32s3", "ble", "unstable"], optional = true }
esp-rtos = { version = "0.2", features = ["esp-radio", "embassy", "esp32s3"], optional = true }
trouble-host = { version = "0.5.1", default-features = false, features = ["peripheral", "gatt", "derive", "default-packet-pool", "default-packet-pool-mtu-255"], optional = true }
embassy-executor = { version = "0.9", optional = true }
embassy-futures = { version = "0.1", optional = true }
embassy-sync = { version = "0.7", optional = true }
embassy-usb = { version = "0.5", optional = true }
static_cell = { version = "2.1", optional = true }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

[features]
qemu = []
pwm = []
es8311 = []
ble-midi = ["dep:esp-radio", "dep:esp-rtos", "dep:trouble-host", "dep:embassy-executor", "dep:embassy-futures", "dep:embassy-sync", "dep:static_cell"]
usb-midi = ["dep:esp-rtos", "dep:embassy-executor", "dep:embassy-futures", "dep:embassy-sync", "dep:embassy-usb", "dep:static_cell"]

[patch.crates-io]
esp-rom-sys = { path = "patches/esp-rom-sys" }

[profile.release]
opt-level = 3
lto = true
strip = true
